More application/module startup debugging